--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/undead.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/undead.yml
@@ -1,9 +1,6 @@
 - type: entity
   id: CP14MobUndeadZombie
-  parent: 
-  - BaseSimpleMob
-  - MobFlammable
-  - MobCombat
+  parent: CP14BaseMobZombie
   name: walking dead
   abstract: true
   description: A reanimated rotting body of a dead man wanting to devour the living.
@@ -14,84 +11,6 @@
   - type: NpcFactionMember
     factions:
     - SimpleHostile
-  - type: MovementSpeedModifier
-    baseWalkSpeed: 2
-    baseSprintSpeed: 3
-  - type: Sprite
-    drawdepth: Mobs
-  - type: MobState
-    allowedStates:
-    - Alive
-    - Dead
-  - type: MobThresholds
-    thresholds:
-      0: Alive
-      150: Dead
-  - type: SlowOnDamage
-    speedModifierThresholds:
-      80: 0.8
-      120: 0.4
-  - type: StatusEffects
-    allowed:
-    - KnockedDown
-    - SlowedDown
-    - Electrocution
-    - Stutter
-    - TemporaryBlindness
-    - Pacified
-  - type: RotationVisuals
-    defaultRotation: 90
-    horizontalRotation: 90
-  - type: Inventory
-    templateId: CP14mannequin
-  - type: InventorySlots
-  - type: ContainerContainer
-  - type: Fixtures
-    fixtures:
-      fix1:
-        shape:
-          !type:PhysShapeCircle
-          radius: 0.35
-        density: 130
-        mask:
-          - MobMask
-        layer:
-          - MobLayer
-  - type: Damageable
-    damageContainer: Biological
-    damageModifierSet: CP14Zombie
-  - type: PassiveDamage
-    allowedStates:
-    - Alive
-    damageCap: 140
-    damage:
-      groups:
-        Brute: -0.3
-        Burn: -0.3
-  - type: MeleeWeapon
-    altDisarm: false
-    angle: 0
-    animation: WeaponArcBite
-    soundHit:
-      path: /Audio/Effects/bite.ogg
-    damage:
-      types:
-        Slash: 4
-  - type: Pullable
-  - type: GhostTakeoverAvailable
-  - type: SpamEmitSound
-    minInterval: 10
-    maxInterval: 30
-    sound:
-      collection: ZombieScreams
-      params:
-        variation: 0.125
-  - type: SoundWhileAlive
-  - type: Strippable
-  - type: UserInterface
-    interfaces:
-      enum.StrippingUiKey.Key:
-        type: StrippableBoundUserInterface
 
 - type: entity
   id: CP14MobUndeadZombieMen
