--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/goblin.yml
@@ -94,6 +94,7 @@
     species: CP14Goblin
   - type: Inventory
     templateId: CP14Human
+    speciesId: goblin
     displacements:
       belt:
         sizeMaps:
