workbench recipes remove nesting

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -94,6 +94,9 @@ CP14FenceWoodHighGate: null
 CP14FenceWoodHighStraight: null
 CP14IronGrilleGateLockedTavern: null
 
+CP14MeltingMoldBlank: null
+CP14WorkbenchMeltingMolds: null
+
 # <---> CrystallPunk migration zone end
 
 
