2 new Lobby image, some bugfix (#468)
* +2 lobby screens

* Update goblin.yml

* workbench recipes remove nesting

* tips update

* Update sewing_table.yml

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -96,6 +96,10 @@ CP14IronGrilleGateLockedTavern: null
 
 CP14ClothingHeadMercenaryBeret: CP14ClothingHeadBeretMercenary
 
+#2024-09-28
+CP14MeltingMoldBlank: null
+CP14WorkbenchMeltingMolds: null
+
 # <---> CrystallPunk migration zone end
 
 
