--- a/Resources/Prototypes/_CP14/Entities/Structures/GirderFrame/frame.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/GirderFrame/frame.yml
@@ -118,7 +118,7 @@
     noRot: false
   - type: Damageable
     damageContainer: Inorganic
-    damageModifierSet: Metallic
+    damageModifierSet: Wood
   - type: Destructible
     thresholds:
     - trigger:
@@ -168,7 +168,7 @@
     noRot: false
   - type: Damageable
     damageContainer: Inorganic
-    damageModifierSet: Metallic
+    damageModifierSet: Wood
   - type: Destructible
     thresholds:
     - trigger:
