--- a/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/Tools/janitor.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Weapons/Melee/Tools/janitor.yml
@@ -31,4 +31,27 @@
     solutions:
       absorbed:
         maxVol: 100
+
+- type: entity
+  id: CP14BaseBroom
+  parent: 
+  - BaseItem
+  - CP14BaseWeaponDestructible
+  name: wooden broom
+  description: Sweeps up dried footprints and other stains from the floor
+  components:
+  - type: Item
+    size: Large
+    sprite: _CP14/Objects/Tools/broom.rsi
+  - type: Sprite
+    sprite: _CP14/Objects/Tools/broom.rsi
+    state: icon
+  - type: MeleeWeapon
+    wideAnimationRotation: 10
+    damage:
+      types:
+        Blunt: 2
+    soundHit:
+      collection: MetalThud
   - type: CP14DecalCleaner
+    delay: 0.75
