--- a/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/workbench.yml
@@ -42,3 +42,13 @@
     CP14WoodenPlanks: 2
     CP14Cloth: 1
   result: CP14BaseMop
+
+- type: CP14Recipe
+  id: CP14BaseBroom
+  tag: CP14RecipeWorkbench
+  craftTime: 3
+  entities:
+    CP14Wheat: 2
+  stacks:
+    CP14WoodenPlanks: 2
+  result: CP14BaseBroom
