--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/mobs.yml
@@ -7,9 +7,8 @@
     layers:
     - sprite: Markers/cross.rsi
       state: green
-    - sprite: _CP14/Mobs/Undead/zombies.rsi
-      state: zombie_m
+    - sprite: _CP14/Mobs/Species/Zombie/parts.rsi
+      state: full
   - type: ConditionalSpawner
     prototypes:
-    - CP14MobUndeadZombieMen
-    - CP14MobUndeadZombieWoman
+    - CP14MobUndeadZombie
