--- a/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
@@ -13,57 +13,23 @@
   name: ritual cucumber
   components:
   - type: CP14MagicRitual
-    startPhase: CP14RitualPhaseTest1
+    startPhase: CP14RitualPhaseStartpoint
 
 - type: entity
   parent: CP14BaseRitualPhase
-  id: CP14RitualPhaseTest1
+  id: CP14RitualPhaseStartpoint
   components:
   - type: PointLight
     color: "#FFFF00"
   - type: CP14RitualTriggerVoice
     nextPhases:
       "Hello": CP14RitualPhaseTest2
-      "Blya": CP14RitualPhaseTest3
-  - type: CP14RitualRequirementEntities
-    visualEffect: CP14ImpactEffectShadowGrab
-    consumeResource: true
-    requiredEntities:
-      CP14FoodCucumber: 3
-
-- type: entity
-  parent: CP14BaseRitualPhase
-  id: CP14RitualPhaseTest2
-  components:
-  - type: PointLight
-    color: "#FF00FF"
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14RitualPhaseTest1
-    time:
-      min: 5
-      max: 10
-  - type: EmitSoundOnSpawn
-    sound: 
-      path: /Audio/Effects/tesla_consume.ogg
-      params:
-        variation: 0.3
-
-- type: entity
-  parent: CP14BaseRitualPhase
-  id: CP14RitualPhaseTest3
-  components:
-  - type: PointLight
-    color: "#00FFFF"
-  - type: CP14RitualTriggerVoice
-    nextPhases:
-      "Burbon": CP14RitualPhaseTest2
-      "Nazad": CP14RitualPhaseTest1
-  - type: CP14RitualTriggerTimer
-    nextPhase: CP14RitualPhaseTest1
-    time:
-      min: 5
-      max: 10
-  - type: RandomSpawner
-    deleteSpawnerAfterSpawn: false
-    prototypes:
-      - CP14DirtEffect
+  - type: CP14MagicRitualPhase
+    edges:
+    - target: CP14RitualPhaseTest2 # To 2
+      requirements:
+      - !type:EntitiesRequirement
+        effect: CP14ImpactEffectShadowGrab
+        checkRange: 3
+        requiredEntities:
+          CP14FoodCucumber: 3
