--- a/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
@@ -23,13 +23,33 @@
     color: "#FFFF00"
   - type: CP14RitualTriggerVoice
     nextPhases:
-      "Hello": CP14RitualPhaseTest2
+      "Hello": CP14RitualPhaseSecond
   - type: CP14MagicRitualPhase
     edges:
-    - target: CP14RitualPhaseTest2 # To 2
+    - target: CP14RitualPhaseSecond # To 2
       requirements:
       - !type:EntitiesRequirement
         effect: CP14ImpactEffectShadowGrab
         checkRange: 3
         requiredEntities:
           CP14FoodCucumber: 3
+
+- type: entity
+  parent: CP14BaseRitualPhase
+  id: CP14RitualPhaseSecond
+  components:
+  - type: PointLight
+    color: "#FF00FF"
+  - type: EmitSoundOnSpawn
+    sound: 
+      path: /Audio/Effects/tesla_consume.ogg
+      params:
+        variation: 0.3
+  - type: CP14RitualTriggerTimer
+    nextPhase: CP14RitualPhaseStartpoint
+    time:
+      min: 5
+      max: 10
+  - type: CP14MagicRitualPhase
+    edges:
+    - target: CP14RitualPhaseStartpoint # To 2
