--- a/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Flora/Gatherable/wild.yml
@@ -172,3 +172,68 @@
   - type: Gatherable
     loot:
       All: CP14GatherLumiMushroom
+
+- type: entity
+  parent: BaseRock
+  id: CP14QuartzCrystal
+  name: quartz
+  description: Quartz is an essential mineral capable of interacting with magical energy. It is highly sought after by alchemists for extracting beneficial properties from liquids
+  components:
+  - type: Sprite
+    drawdepth: Mobs
+    sprite: _CP14/Structures/crystal.rsi
+    offset: 0, 0.25
+    noRot: true   
+    layers:
+      - state: big
+        map: ["random"]
+  - type: InteractionPopup
+    interactSuccessString: popup-cp14crystal-ding
+    messagePerceivedByOthers: popup-cp14crystal-ding
+    interactSuccessSound:
+      collection: CP14CrystalDings
+      params:
+        variation: 0.03
+  - type: Damageable
+    damageContainer: Inorganic
+    damageModifierSet: Glass
+  - type: MeleeSound
+    soundGroups:
+      Brute:
+        collection: GlassSmash
+  - type: Destructible
+    thresholds:
+      - trigger:
+          !type:DamageTrigger
+          damage: 20
+        behaviors:
+          - !type:PlaySoundBehavior
+            sound:
+              collection: GlassBreak
+          - !type:DoActsBehavior
+            acts: [ "Destruction" ]
+          - !type:SpawnEntitiesBehavior
+            spawn:
+              CP14QuartzShard:
+                min: 1
+                max: 3
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.30
+        density: 60
+        mask:
+          - MachineMask
+        layer:
+          - MidImpassable
+          - LowImpassable
+          - BulletImpassable
+          - Opaque
+  - type: RandomSprite
+    available:
+    - random:
+        big: ""
+        medium: ""
+        small: ""
