--- a/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
@@ -18,6 +18,7 @@
 - type: entity
   parent: CP14BaseRitualPhase
   id: CP14RitualPhaseStartpoint
+  name: нейтральный исходный узел
   components:
   - type: PointLight
     color: "#FFFF00"
@@ -30,6 +31,12 @@
   - type: CP14MagicRitualPhase
     edges:
     - target: CP14RitualPhaseFailed
+      
+      actions: 
+      - !type:SpawnEntity
+        proto: CP14FoodCucumber
+        count: 3
+      
     - target: CP14RitualPhaseSecond
       requirements:
       - !type:RequiredResource
@@ -66,11 +73,12 @@
                 Piercing: -10
                 Heat: -10
           - !type:Jitter
-        
+
 
 - type: entity
   parent: CP14BaseRitualPhase
   id: CP14RitualPhaseSecond
+  name: темпоральный огуречный узел
   components:
   - type: PointLight
     color: "#FF00FF"
@@ -91,6 +99,7 @@
 - type: entity
   parent: CP14BaseRitualPhase
   id: CP14RitualPhaseFailed
+  name: нестабильный темпоральный узел
   components:
   - type: PointLight
     color: "#FF0000"
