--- a/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
@@ -6,6 +6,12 @@
   - type: Tag
     tags:
       - HideContextMenu
+  - type: PointLight
+  - type: EmitSoundOnSpawn
+    sound: 
+      path: /Audio/Effects/tesla_consume.ogg
+      params:
+        variation: 0.3
 
 - type: entity
   parent: CP14FoodCucumber
@@ -24,27 +30,44 @@
     describePhase: CP14RitualPhaseStartpoint
 
 - type: entity
+  parent: CP14Paper
+  id: CP14PaperRitual2
+  name: ritual describer 2
+  components:
+  - type: CP14PaperPhaseDescriber
+    describePhase: CP14RitualPhaseSecond
+
+- type: entity
+  parent: CP14Paper
+  id: CP14PaperRitual3
+  name: ritual describer 3
+  components:
+  - type: CP14PaperPhaseDescriber
+    describePhase: CP14RitualPhaseFailed
+
+- type: entity
   parent: CP14BaseRitualPhase
   id: CP14RitualPhaseStartpoint
   name: нейтральный исходный узел
   description: Идеальная энергетическая позиция для начала любого ритуала.
   components:
-  - type: PointLight
-    color: "#FFFF00"
   - type: CP14RitualTriggerVoice
     failAttempts: 3
     failedPhase: CP14RitualPhaseFailed
     triggers:
     - targetPhase: CP14RitualPhaseSecond
       message: "Singulo"
+      speakers: 2
   - type: CP14MagicRitualPhase
+    phaseColor: "#FF0000"
     edges:
     - target: CP14RitualPhaseFailed
       
       actions: 
       - !type:SpawnEntity
-        proto: CP14FoodCucumber
-        count: 3
+        spawns:
+          CP14FoodCucumber: 3
+          CP14FoodPotato: 1
       
     - target: CP14RitualPhaseSecond
       requirements:
@@ -89,19 +112,13 @@
   id: CP14RitualPhaseSecond
   name: темпоральный огуречный узел
   components:
-  - type: PointLight
-    color: "#FF00FF"
-  - type: EmitSoundOnSpawn
-    sound: 
-      path: /Audio/Effects/tesla_consume.ogg
-      params:
-        variation: 0.3
   - type: CP14RitualTriggerTimer
     nextPhase: CP14RitualPhaseStartpoint
     time:
       min: 5
       max: 10
   - type: CP14MagicRitualPhase
+    phaseColor: "#FF00FF"
     edges:
     - target: CP14RitualPhaseStartpoint # To start
 
@@ -110,18 +127,12 @@
   id: CP14RitualPhaseFailed
   name: нестабильный темпоральный узел
   components:
-  - type: PointLight
-    color: "#FF0000"
-  - type: EmitSoundOnSpawn
-    sound: 
-      path: /Audio/Effects/tesla_consume.ogg
-      params:
-        variation: 0.6
   - type: CP14RitualTriggerTimer
     nextPhase: CP14RitualPhaseStartpoint
     time:
       min: 5
       max: 10
   - type: CP14MagicRitualPhase
+    phaseColor: "#FF0000"
     edges:
     - target: CP14RitualPhaseStartpoint # To start
