--- a/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
+++ b/Resources/Prototypes/_CP14/Entities/Ritual/phases.yml
@@ -78,8 +78,8 @@
           CP14FoodCucumber: 3
         requiredStack:
           CP14WoodenPlanks: 2
-      - !type:RequiredStability
-        min: 0.5
+      - !type:RequiredTime
+        timePeriod: Night
 
       actions: 
       - !type:EditStability
