--- a/Resources/Prototypes/_CP14/audio_music.yml
+++ b/Resources/Prototypes/_CP14/audio_music.yml
@@ -12,6 +12,14 @@
 # 3 Priority - Departments
 
 # 2 Priority - General areas
+- type: ambientMusic
+  id: CP14NightForest
+  sound:
+    params:
+      volume: -6
+    collection: CP14NightForest
+  rules: NightForest
+  priority: 2
 
 ## Fallback if nothing else found
 - type: ambientMusic
@@ -44,7 +52,22 @@
     - /Audio/_CP14/Ambience/ambimagic2.ogg
     - /Audio/_CP14/Ambience/ambimagic3.ogg
     - /Audio/_CP14/Ambience/ambimagic4.ogg
+    - /Audio/_CP14/Ambience/ambimagic5.ogg
+    - /Audio/_CP14/Ambience/ambimagic6.ogg
     - /Audio/_CP14/Ambience/ambiAlchemy.ogg
+
+- type: soundCollection
+  id: CP14NightForest
+  files:
+    - /Audio/_CP14/Animals/owl1.ogg
+    - /Audio/_CP14/Animals/owl2.ogg
+    - /Audio/_CP14/Animals/owl3.ogg
+    - /Audio/_CP14/Animals/owl4.ogg
+    - /Audio/_CP14/Animals/owl5.ogg
+    - /Audio/_CP14/Animals/owl6.ogg
+    - /Audio/_CP14/Animals/owl7.ogg
+    - /Audio/_CP14/Animals/owl8.ogg
+    - /Audio/_CP14/Animals/owl9.ogg
 
 # Rules
 - type: rules
@@ -62,3 +85,21 @@
           - CP14MagicRitualPhase
           - CP14MagicRitual
       range: 6
+
+- type: rules
+  id: NightForest
+  rules:
+    - !type:CP14TimePeriod
+      periods:
+      - Night 
+      - Evening
+    - !type:NearbyTilesPercentRule
+      ignoreAnchored: true
+      percent: 0.5
+      tiles:
+      - CP14FloorGrass
+      - CP14FloorGrassLight
+      - CP14FloorGrassTall
+      - CP14FloorDirt
+      - CP14FloorSand
+      range: 5
